add issue book feature